fix(past-sponsors): adjust spacing between logos in small mobiles and tablet (#403)
- use a row-gap: 40px for mobile
- use a column and row gap of 40px for screens between 640px and 1024px width

--- a/css/_past-sponsors.scss
+++ b/css/_past-sponsors.scss
@@ -44,7 +44,13 @@
     margin: 0 18px;
     justify-content: space-evenly;
     padding: 25px;
-    gap: 25px;
+    column-gap: 25px;
+    row-gap: 40px;
+
+    @include sm {
+      gap: 40px;
+    }
+    
     @include lg {
       padding: 65px;
       gap: 80px;
